credits alignment issue solved

--- a/src/styles/teams.module.css
+++ b/src/styles/teams.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 5rem 0 6rem;
+    margin: 0 0 0 10rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
